Fix align for sidebar-section playlist

--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,22 @@ figure > img {
     width: 20px;
 }
 
+.sidebar-section h3 {
+    margin-bottom: 15px;
+}
+
+.section-create-list {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 23px;
+}
+
+.sidebar-section .section-list {
+    display: flex;
+    flex-direction: column;
+    gap: 23px;
+}
+
 /* APP-TOOLBAR */
 
 .app__toolbar {
